# use-liftoff-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  llm_providers.py  main.py  prompts.py  pyproject.toml
src/: agent_types.py  llm_providers.py  metadata_transformer.py  session_manager.py
